[package]
name = "disablewinkey"
version = "0.1.0"
edition = "2021"
description = "Disables the left Windows key while running, from the system tray."

[dependencies]
tao = "0.34"
tray-icon = "0.21"

[dependencies.windows]
version = "0.62"
features = [
  "Win32_Foundation",
  "Win32_UI_Input_KeyboardAndMouse",
  "Win32_UI_WindowsAndMessaging",
]

[profile.release]
lto = true
codegen-units = 1
